--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     font-size: 1.2em;
     z-index: 1100;
 }
-</style>
+    </style>
 </head>
 
 <body>
@@ -113,7 +113,7 @@
                     </div>
                 </div>
             </div>
-            <div class="uno-row bottom-row">
+            <div class="uno-row bottom-row" v-if="!waitingForNextPlayer">
                 <div class="player-label" :class="{active: getPlayerIndex(0)===currentPlayer}">
                     Spieler {{getPlayerIndex(0)+1}} <span v-if="getPlayerIndex(0)===currentPlayer">(am Zug)</span>
                     <span style="font-size:0.9em; color:#ffd600; margin-left:8px;">({{ hands[getPlayerIndex(0)].length }} Karten)</span>
@@ -130,6 +130,11 @@
                     <div v-for="card in hands[getPlayerIndex(0)]" class="card back"></div>
                 </div>
             </div>
+            <div v-if="waitingForNextPlayer" class="next-player-msg" style="z-index:1200;">
+    Spieler {{currentPlayer+1}}: Bitte klicke auf "Zug starten" um deine Karten zu sehen.
+    <br>
+    <button @click="continueTurn()" style="margin-top:10px;">Zug starten</button>
+</div>
         </div>
     </div>
     <script src="uno.js"></script>
