refactor: move CSS styles from index.html to uno.css for better organization

--- a/index.html
+++ b/index.html
@@ -6,45 +6,7 @@
     <title>UNO Spiel – 2 Spieler</title>
     <script src="https://unpkg.com/vue@3/dist/vue.global.prod.js"></script>
     <link rel="stylesheet" href="uno.css">
-    <style>
-.color-picker-overlay {
-    position: fixed;
-    top: 0; left: 0; right: 0; bottom: 0;
-    background: rgba(0,0,0,0.7);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    z-index: 1000;
-}
-.color-picker-modal {
-    background: #222;
-    padding: 30px 40px;
-    border-radius: 16px;
-    box-shadow: 0 4px 32px #000a;
-    text-align: center;
-    color: #fff;
-    font-size: 1.3em;
-}
-.current-color-indicator {
-    width: 20px;
-    height: 20px;
-    border-radius: 50%;
-    display: inline-block;
-    margin-top: 10px;
-}
-.next-player-msg {
-    position: absolute;
-    top: 10px;
-    left: 50%;
-    transform: translateX(-50%);
-    background: rgba(0, 0, 0, 0.8);
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 12px;
-    font-size: 1.2em;
-    z-index: 1100;
-}
-    </style>
+    <!-- CSS aus index.html entfernt, alles ist jetzt in uno.css -->
 </head>
 
 <body>
